[package]
name = "ukingidatool"
version = "0.1.0"
edition = "2021"

[dependencies]
elf = "0.7.4"
error-stack = "0.5.0"
gimli = "0.31.0"
itertools = "0.13.0"
num_cpus = "1.16.0"
terminal_size = "0.3.0"
thiserror = "1.0.63"

[features]
default = []
debug-resolve-name = [] # Debug name resolution algorithm
debug-type-gc = [] # Debug type garbage collection algorithm
debug-layout = [] # Debug layout optimization handling (tail padding and empty base)
