[package]
name = "uking-extract"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
common = { path = "../common", version = "=0.0.0" }
derivative = "2.2.0"
elf = "0.7.4"
error-stack = "0.5.0"
gimli = "0.31.0"
num_cpus = "1.16.0"
thiserror = "1.0.63"

[features]
default = []
debug-merge = []
debug-resolve-name = [] # Debug name resolution algorithm
debug-resolve-size = []
debug-layout = [] # Debug layout optimization handling (tail padding and empty base)
debug-union-opt = [] # Debug union optimization handling
debug-create-def = []
